# paste-cli

./: README.md  setup.cfg
scripts/: pastegram-cli
