[metadata]
name = pastegram-cli
version = 1.0.0
author = Pato05
author_email = pato05mc@gmail.com
description = A CLI tool to use Pastegram from the terminal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Uploadgram/paste-cli
project_urls =
    Bug Tracker = https://github.com/Uploadgram/paste-cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
scripts =
    scripts/pastegram-cli
python_requires = >=3.0
install_requires =
    pastegram == 1.0.1
